final label unification

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -81,10 +81,13 @@
     "#set the label-units just once!\n",
     "if use_imperial:\n",
     "    label_units = \"Miles\"\n",
+    "    short_label = \"miles\"\n",
     "else:\n",
     "    label_units = \"Kilometers\"\n",
+    "    short_label = \"kms\"\n",
     "    \n",
-    "label_units_lower = label_units.lower()"
+    "label_units_lower = label_units.lower()\n",
+    "distance_col = \"distance_\" + short_label"
    ]
   },
   {
@@ -234,13 +237,9 @@
    "source": [
     "#determine 80th percentile\n",
     "cutoff = expanded_ct.distance.quantile(0.8)\n",
+    "dist_threshold = expanded_ct[distance_col].quantile(0.8).round(1)\n",
+    "dist_threshold = str(dist_threshold) \n",
     "\n",
-    "if use_imperial:\n",
-    "    dist_threshold = expanded_ct.distance_miles.quantile(0.8).round(1)\n",
-    "else:\n",
-    "    dist_threshold = expanded_ct.distance_kms.quantile(0.8).round(1)\n",
-    "\n",
-    "dist_threshold = str(dist_threshold)   \n",
     "plot_title_no_quality=\"Mode confirmations for trips under \" + dist_threshold + \" \" + label_units_lower\n",
     "plot_title_no_quality=plot_title_no_quality+\"\\n[\"+dist_threshold + \" \" + label_units_lower+\" represents 80th percentile of trip length]\"\n",
     "file_name ='ntrips_under10miles_mode_confirm%s' % file_suffix\n",
@@ -283,11 +282,7 @@
     "file_name ='miles_mode_confirm%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    if use_imperial:\n",
-    "        dist = expanded_ct.groupby('Mode_confirm').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
-    "    else:\n",
-    "        dist = expanded_ct.groupby('Mode_confirm').agg({'distance_kms': ['sum', 'count' , 'mean']})\n",
-    "\n",
+    "    dist = expanded_ct.groupby('Mode_confirm').agg({distance_col: ['sum', 'count' , 'mean']})\n",
     "    dist.columns = ['Total ('+label_units_lower+')', 'Count', 'Average ('+label_units_lower+')']\n",
     "    dist = dist.reset_index()\n",
     "    dist =dist.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
