--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -95,10 +95,13 @@
     "#set the label-units just once!\n",
     "if use_imperial:\n",
     "    label_units = \"Miles\"\n",
+    "    short_label = \"miles\"\n",
     "else:\n",
     "    label_units = \"Kilometers\"\n",
+    "    short_label = \"kms\"\n",
     "    \n",
-    "label_units_lower = label_units.lower()"
+    "label_units_lower = label_units.lower()\n",
+    "distance_col = \"distance_\" + short_label"
    ]
   },
   {
@@ -238,11 +241,7 @@
     "file_name =f'miles_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    if use_imperial:\n",
-    "        dg=data_eb.groupby('Replaced_mode').agg({'distance_miles': ['sum', 'count' , 'mean']},)\n",
-    "    else:\n",
-    "        dg=data_eb.groupby('Replaced_mode').agg({'distance_kms': ['sum', 'count' , 'mean']},)\n",
-    "        \n",
+    "    dg=data_eb.groupby('Replaced_mode').agg({distance_col: ['sum', 'count' , 'mean']},)\n",
     "    dg.columns = ['Total ('+label_units_lower+')', 'Count' ,'Average ('+label_units_lower+')']\n",
     "    dg = dg.reset_index()\n",
     "    dg = dg.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
