--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -89,10 +89,13 @@
     "#set the label-units just once!\n",
     "if use_imperial:\n",
     "    label_units = \"Miles\"\n",
+    "    short_label = \"miles\"\n",
     "else:\n",
     "    label_units = \"Kilometers\"\n",
+    "    short_label = \"kms\"\n",
     "    \n",
-    "label_units_lower = label_units.lower()"
+    "label_units_lower = label_units.lower()\n",
+    "distance_col = \"distance_\" + short_label"
    ]
   },
   {
@@ -182,20 +185,15 @@
     "        # Count the number of trips for each confirmed mode\n",
     "        mode_counts = data.groupby(['user_id','date_time','mode_confirm'], as_index=False).size()\n",
     "        mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
-    "\n",
-    "        if use_imperial:\n",
-    "            dist_col = 'distance_miles'\n",
-    "        else:\n",
-    "            dist_col = 'distance_kms'\n",
     "            \n",
     "        # Sum daily distance traveled for each mode\n",
-    "        mode_distance = data.groupby(['user_id','date_time','mode_confirm'], as_index=False)[[dist_col]].sum()\n",
-    "        mode_distance.rename(columns={'sum': dist_col}, inplace=True)\n",
-    "        mode_distance[dist_col] = mode_distance[dist_col].fillna(0)\n",
+    "        mode_distance = data.groupby(['user_id','date_time','mode_confirm'], as_index=False)[[distance_col]].sum()\n",
+    "        mode_distance.rename(columns={'sum': distance_col}, inplace=True)\n",
+    "        mode_distance[distance_col] = mode_distance[distance_col].fillna(0)\n",
     "\n",
     "        # Add 7-day rolling avg smoothing to better see trends\n",
     "        mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','mode_confirm'], group_keys=False)['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "        mode_distance['distance_smooth'] = mode_distance.groupby(['user_id','mode_confirm'], group_keys=False)[dist_col].apply(lambda x: x.rolling(7,1).mean())\n",
+    "        mode_distance['distance_smooth'] = mode_distance.groupby(['user_id','mode_confirm'], group_keys=False)[distance_col].apply(lambda x: x.rolling(7,1).mean())\n",
     "\n",
     "        # This is the mode specific part\n",
     "        mode_counts_interest = mode_counts[mode_counts['mode_confirm']==mode_of_interest].copy()\n",
@@ -271,7 +269,7 @@
     "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
     "    \n",
     "    ylab = label_units\n",
-    "    plot_data = mode_distance_interest.groupby(['date_time'])[dist_col].agg(['sum']).reset_index()\n",
+    "    plot_data = mode_distance_interest.groupby(['date_time'])[distance_col].agg(['sum']).reset_index()\n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "\n",
@@ -295,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_data = mode_distance_interest.groupby(['date_time'])[dist_col].agg(['sum']).reset_index()\n",
+    "plot_data = mode_distance_interest.groupby(['date_time'])[distance_col].agg(['sum']).reset_index()\n",
     "plot_data = plot_data.merge(active_users, on='date_time')\n",
     "plot_data['distance_per_user'] = plot_data['sum'] / plot_data['active_users']\n",
     "ylab = label_units_lower+'/user'\n",
@@ -321,7 +319,7 @@
     "        # force error generation so that we will go into the \"missing\" data code path\n",
     "        raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
     "\n",
-    "    plot_data = mode_distance_interest.groupby(['date_time'])[dist_col].agg(['sum']).reset_index()\n",
+    "    plot_data = mode_distance_interest.groupby(['date_time'])[distance_col].agg(['sum']).reset_index()\n",
     "    ylab = label_units_lower+'/user'\n",
     "        \n",
     "    plot_data = plot_data.merge(active_users, on='date_time')\n",
