--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -66,10 +66,13 @@
     "#set the label-units just once!\n",
     "if use_imperial:\n",
     "    label_units = \"Miles\"\n",
+    "    short_label = \"miles\"\n",
     "else:\n",
     "    label_units = \"Kilometers\"\n",
+    "    short_label = \"kms\"\n",
     "    \n",
-    "label_units_lower = label_units.lower()"
+    "label_units_lower = label_units.lower()\n",
+    "distance_col = \"distance_\" + short_label"
    ]
   },
   {
@@ -152,13 +155,9 @@
    "source": [
     "#determine 80th percentile\n",
     "cutoff = expanded_ct.distance.quantile(0.8)\n",
-    "\n",
-    "if use_imperial:\n",
-    "    dist_threshold = expanded_ct.distance_miles.quantile(0.8).round(1)\n",
-    "else:\n",
-    "    dist_threshold = expanded_ct.distance_kms.quantile(0.8).round(1)\n",
-    "\n",
+    "dist_threshold = expanded_ct[distance_col].quantile(0.8).round(1)\n",
     "dist_threshold = str(dist_threshold)\n",
+    "\n",
     "plot_title_no_quality=\"Number of trips under \" + dist_threshold + \" \" + label_units_lower + \" for each primary mode\"\n",
     "plot_title_no_quality=plot_title_no_quality + \"\\n(inferred by OpenPATH from phone sensors)\" \n",
     "plot_title_no_quality=plot_title_no_quality + \"\\n[\"+dist_threshold + \" \" + label_units_lower+\" represents 80th percentile of trip length]\"\n",
@@ -201,17 +200,10 @@
     "file_name ='miles_sensed_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    if use_imperial:\n",
-    "        dist = expanded_ct.groupby('primary_mode').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
-    "    else:\n",
-    "        dist = expanded_ct.groupby('primary_mode').agg({'distance_kms': ['sum', 'count' , 'mean']})\n",
-    "        \n",
-    "\n",
+    "    dist = expanded_ct.groupby('primary_mode').agg({distance_col: ['sum', 'count' , 'mean']})\n",
     "    dist.columns = ['Total ('+label_units_lower+')', 'Count', 'Average ('+label_units_lower+')']\n",
     "    dist = dist.reset_index()\n",
     "    dist = dist.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
-    "\n",
-    "    #data\n",
     "    dist_dict = dict(zip(dist['primary_mode'], dist['Total ('+label_units_lower+')']))\n",
     "\n",
     "    labels_m = []\n",
@@ -249,11 +241,7 @@
     "file_name ='miles_sensed_mode_land%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    if use_imperial:\n",
-    "        dist = expanded_ct.groupby('primary_mode').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
-    "    else:\n",
-    "        dist = expanded_ct.groupby('primary_mode').agg({'distance_kms': ['sum', 'count' , 'mean']})\n",
-    "    \n",
+    "    dist = expanded_ct.groupby('primary_mode').agg({distance_col: ['sum', 'count' , 'mean']})\n",
     "    dist.columns = ['Total ('+label_units_lower+')', 'Count', 'Average ('+label_units_lower+')']\n",
     "    dist = dist.reset_index()\n",
     "    dist =dist.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
