--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -69,6 +69,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set the label-units just once!\n",
+    "if use_imperial:\n",
+    "    distance_col = 'distance_miles'\n",
+    "    weight_unit = 'lb'\n",
+    "    dist_unit = 'mile'\n",
+    "else:\n",
+    "    distance_col = 'distance'\n",
+    "    weight_unit ='kg'\n",
+    "    dist_unit = 'km'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -107,11 +124,13 @@
    "outputs": [],
    "source": [
     "# Get timestamp from known year/month/day aggregated to days\n",
+    "sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day', distance_col]\n",
+    "\n",
     "if use_imperial:\n",
-    "    sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance_miles']\n",
+    "#     sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance_miles']\n",
     "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_lb_CO2']\n",
     "else:\n",
-    "    sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance']\n",
+    "#     sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance']\n",
     "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_kg_CO2']\n",
     "\n",
     "if len(expanded_ct) == 0:\n",
@@ -178,11 +197,7 @@
     "        # Count the number of trips for each confirmed mode\n",
     "        mode_counts = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False).size()\n",
     "        mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
-    "\n",
-    "        if use_imperial:\n",
-    "            mode_counts, mode_distance, emissions, energy = compute_daily_metrics( data, weight_unit = 'lb', distance_unit = 'distance_miles')\n",
-    "        else:\n",
-    "            mode_counts, mode_distance, emissions, energy = compute_daily_metrics(data, weight_unit = 'kg', distance_unit = 'distance')"
+    "        mode_counts, mode_distance, emissions, energy = compute_daily_metrics( data, weight_unit = weight_unit, distance_unit = distance_col)"
    ]
   },
   {
@@ -221,10 +236,7 @@
     "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
     "\n",
     "try:\n",
-    "    if use_imperial:\n",
-    "        plot_emission_per_week(emissions, 'lb', active_users)\n",
-    "    else:\n",
-    "        plot_emission_per_week(emissions, 'kg', active_users)\n",
+    "    plot_emission_per_week(emissions, weight_unit, active_users)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -291,10 +303,8 @@
     "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
     "\n",
     "try:\n",
-    "    if use_imperial:\n",
-    "        plot_emissions_per_distance_day(emissions, 'lb', 'mile','distance_miles_smooth')\n",
-    "    else:\n",
-    "        plot_emissions_per_distance_day(emissions, 'kg', 'km', 'distance_smooth')\n",
+    "    plot_emissions_per_distance_day(emissions, weight_unit, dist_unit, f'{distance_col}_smooth')\n",
+    "\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
