--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -140,10 +140,12 @@
     "else:\n",
     "    #add mode confirm related columns if labeled\n",
     "    data = expanded_ct[sel_cols_with_label_dep].copy()\n",
+    "\n",
+    "if len(expanded_ct) > 0:\n",
+    "    data.rename(columns={'start_local_dt_year':'year','start_local_dt_month':'month','start_local_dt_day':'day'}, inplace=True)\n",
+    "    data['date_time'] = pd.to_datetime(data[['year','month','day']])\n",
+    "    data = data.drop(columns=['year','month','day'])\n",
     "    \n",
-    "data.rename(columns={'start_local_dt_year':'year','start_local_dt_month':'month','start_local_dt_day':'day'}, inplace=True)\n",
-    "data['date_time'] = pd.to_datetime(data[['year','month','day']])\n",
-    "data = data.drop(columns=['year','month','day'])\n",
     "# Categorical type will include all days/modes in groupby even if there is no data for a particular tabulation\n",
     "data.user_id = pd.Categorical(data.user_id)\n",
     "data.date_time = pd.Categorical(data.date_time)\n",
