--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -29,7 +29,7 @@
     "mode_of_interest = None\n",
     "include_test_users = False\n",
     "dynamic_labels = {}\n",
-    "use_imperial = False"
+    "use_imperial = True"
    ]
   },
   {
@@ -410,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
