Revert "revert changes with all the notebook variables"
This reverts commit 6effdf79cc88480d4820f8a4163cbfde93ced507.

--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = None\n",
-    "month = None\n",
+    "year = 2020\n",
+    "month = 11\n",
     "program = \"default\"\n",
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
@@ -339,6 +339,9 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "72076fd04c06dcef1e530b48973026eda7036413ff5a3be73ace452fcce0cab6"
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
