--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -29,9 +29,10 @@
     "month = 11\n",
     "program = \"default\"\n",
     "study_type = \"program\"\n",
-    "mode_of_interest = \"e-bike\"\n",
+    "mode_of_interest = \"train\"\n",
     "include_test_users = False\n",
-    "dynamic_labels = { }"
+    "dynamic_labels = { }\n",
+    "use_imperial = True"
    ]
   },
   {
@@ -389,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
