--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -31,7 +31,7 @@
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
     "include_test_users = False\n",
-    "dynamic_labels = {}"
+    "dynamic_labels = {}\n",
     "use_imperial = False"
    ]
   },
@@ -409,6 +409,9 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "72076fd04c06dcef1e530b48973026eda7036413ff5a3be73ace452fcce0cab6"
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -424,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
