--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -97,25 +97,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75896a28",
-   "metadata": {},
-   "source": [
-    "### Unfiltered Lists of mode, purpose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "049c514c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mode_labels_unfiltered = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
-    "purpose_labels_unfiltered = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "modified-skiing",
    "metadata": {},
    "source": [
@@ -145,7 +126,7 @@
     "    labels_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
     "    values_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).tolist()    \n",
     "    plot_title = plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    pie_chart_mode(plot_title,labels_mc,values_mc,mode_labels_unfiltered,file_name)\n",
+    "    pie_chart_mode(plot_title,labels_mc,values_mc,labels_mc,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
     "    print(expanded_ct['Mode_confirm'].value_counts(dropna=True))\n",
     "except:\n",
@@ -166,6 +147,8 @@
     "file_name= 'ntrips_commute_mode_confirm%s' % file_suffix\n",
     "\n",
     "try:\n",
+    "    mode_labels_unfiltered = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
+    "    \n",
     "    if (len(dynamic_labels)):\n",
     "        purpose_map_label =  scaffolding.mapping_labels(dynamic_labels, \"PURPOSE\")\n",
     "        translation_work = purpose_map_label['work']\n",
@@ -177,6 +160,7 @@
     "    values_mc = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).tolist()\n",
     "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(trip_purpose_query), \"commute\", include_test_users)\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+commute_quality_text\n",
+    "    \n",
     "    pie_chart_mode(plot_title,labels_mc,values_mc,mode_labels_unfiltered,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
     "except:\n",
@@ -209,7 +193,7 @@
     "    labels_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "    values_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).tolist()\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    pie_chart_purpose(plot_title,labels_tp,values_tp,purpose_labels_unfiltered,file_name)\n",
+    "    pie_chart_purpose(plot_title,labels_tp,values_tp,labels_tp,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)\n",
     "    print(expanded_ct['Trip_purpose'].value_counts(dropna=True))\n",
     "except:\n",
@@ -237,6 +221,8 @@
     "plot_title_no_quality=\"Mode confirmations for trips under 10 Miles\"\n",
     "file_name ='ntrips_under10miles_mode_confirm%s' % file_suffix\n",
     "try:\n",
+    "    mode_labels_unfiltered = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
+    "\n",
     "    labels_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
     "    values_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True).tolist()\n",
     "    d10_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance_miles'] <= 10], \"< 10 mile\", include_test_users)\n",
@@ -272,6 +258,8 @@
     "file_name ='miles_mode_confirm%s' % file_suffix\n",
     "\n",
     "try:\n",
+    "    mode_labels_unfiltered = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
+    "\n",
     "    miles = expanded_ct.groupby('Mode_confirm').agg({'distance_miles': ['sum', 'count' , 'mean']})\n",
     "    miles.columns = ['Total (miles)', 'Count', 'Average (miles)']\n",
     "    miles = miles.reset_index()\n",
