--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -110,25 +110,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9704f9f8",
-   "metadata": {},
-   "source": [
-    "### Unfiltered Lists of purpose and replaced mode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc043a47",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "purpose_labels_unfiltered = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
-    "replaced_labels_unfiltered = expanded_ct['Replaced_mode'].value_counts(dropna=True).keys().tolist()"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "77eedae6",
@@ -190,6 +171,8 @@
     "file_name= f'ntrips_{mode_of_interest}_purpose%s' % file_suffix\n",
     "\n",
     "try:\n",
+    "    purpose_labels_unfiltered = expanded_ct.Trip_purpose.value_counts(dropna=True).keys().tolist()\n",
+    "\n",
     "    labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "    values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
@@ -211,6 +194,8 @@
     "file_name =f'ntrips_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
+    "    replaced_labels_unfiltered = expanded_ct.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
+    "\n",
     "    labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
     "    values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
@@ -240,6 +225,8 @@
     "file_name =f'miles_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
+    "    replaced_labels_unfiltered = expanded_ct.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
+    "\n",
     "    dg=data_eb.groupby('Replaced_mode').agg({'distance_miles': ['sum', 'count' , 'mean']},)\n",
     "    dg.columns = ['Total (miles)', 'Count' ,'Average (miles)']\n",
     "    dg = dg.reset_index()\n",
