--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -72,6 +72,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "796f59c7",
+   "metadata": {},
+   "source": [
+    "### Color Mapping for labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14e7260c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors_mode, colors_purpose = scaffolding.mapping_color_labels(dynamic_labels, dic_re, dic_pur)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "intellectual-columbus",
    "metadata": {},
    "source": [
@@ -126,7 +144,7 @@
     "    labels_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
     "    values_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).tolist()    \n",
     "    plot_title = plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    pie_chart_mode(plot_title,labels_mc,values_mc,labels_mc,file_name)\n",
+    "    pie_chart_mode(plot_title,labels_mc,values_mc,colors_mode,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
     "    print(expanded_ct['Mode_confirm'].value_counts(dropna=True))\n",
     "except:\n",
@@ -147,8 +165,6 @@
     "file_name= 'ntrips_commute_mode_confirm%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    mode_labels_unfiltered = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
-    "    \n",
     "    if (len(dynamic_labels)):\n",
     "        purpose_map_label =  scaffolding.mapping_labels(dynamic_labels, \"PURPOSE\")\n",
     "        translation_work = purpose_map_label['work']\n",
@@ -161,7 +177,7 @@
     "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(trip_purpose_query), \"commute\", include_test_users)\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+commute_quality_text\n",
     "    \n",
-    "    pie_chart_mode(plot_title,labels_mc,values_mc,mode_labels_unfiltered,file_name)\n",
+    "    pie_chart_mode(plot_title,labels_mc,values_mc,colors_mode,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
     "except:\n",
     "    debug_df.loc[\"Commute_trips\"] = len(expanded_ct.query(trip_purpose_query)) if \"Trip_purpose\" in expanded_ct.columns else 0\n",
@@ -193,7 +209,7 @@
     "    labels_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "    values_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).tolist()\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    pie_chart_purpose(plot_title,labels_tp,values_tp,labels_tp,file_name)\n",
+    "    pie_chart_purpose(plot_title,labels_tp,values_tp,colors_purpose,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)\n",
     "    print(expanded_ct['Trip_purpose'].value_counts(dropna=True))\n",
     "except:\n",
@@ -227,7 +243,7 @@
     "    values_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True).tolist()\n",
     "    d10_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance_miles'] <= 10], \"< 10 mile\", include_test_users)\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+d10_quality_text\n",
-    "    pie_chart_mode(plot_title,labels_d10,values_d10,mode_labels_unfiltered,file_name)\n",
+    "    pie_chart_mode(plot_title,labels_d10,values_d10,colors_mode,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_d10, labels_d10), file_name, plot_title)\n",
     "    print(expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True))\n",
     "except:\n",
@@ -277,7 +293,7 @@
     "        \n",
     "    plot_title=\"Miles for each mode (selected by users)\\n%s\" % quality_text\n",
     "\n",
-    "    pie_chart_mode(plot_title,labels_m,values_m,mode_labels_unfiltered,file_name)\n",
+    "    pie_chart_mode(plot_title,labels_m,values_m,colors_mode,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "    print(miles)\n",
     "except:\n",
