--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -86,6 +86,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "397709c8",
+   "metadata": {},
+   "source": [
+    "### Color Mapping for labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3caccda7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors_mode, colors_purpose = scaffolding.mapping_color_labels(dynamic_labels, dic_re, dic_pur)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "built-occupation",
    "metadata": {},
    "source": [
@@ -171,12 +189,10 @@
     "file_name= f'ntrips_{mode_of_interest}_purpose%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    purpose_labels_unfiltered = expanded_ct.Trip_purpose.value_counts(dropna=True).keys().tolist()\n",
-    "\n",
     "    labels_tp = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "    values_tp = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    pie_chart_purpose(plot_title,labels_tp,values_tp,purpose_labels_unfiltered,file_name)\n",
+    "    pie_chart_purpose(plot_title,labels_tp,values_tp,colors_purpose,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
@@ -194,12 +210,10 @@
     "file_name =f'ntrips_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    replaced_labels_unfiltered = expanded_ct.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
-    "\n",
     "    labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
     "    values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    pie_chart_mode(plot_title,labels_eb,values_eb,replaced_labels_unfiltered,file_name)\n",
+    "    pie_chart_mode(plot_title,labels_eb,values_eb,colors_mode,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_eb, labels_eb), file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
@@ -225,8 +239,6 @@
     "file_name =f'miles_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    replaced_labels_unfiltered = expanded_ct.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
-    "\n",
     "    dg=data_eb.groupby('Replaced_mode').agg({'distance_miles': ['sum', 'count' , 'mean']},)\n",
     "    dg.columns = ['Total (miles)', 'Count' ,'Average (miles)']\n",
     "    dg = dg.reset_index()\n",
@@ -241,7 +253,7 @@
     "        values_m.append(y)\n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    pie_chart_mode(plot_title,labels_m,values_m,replaced_labels_unfiltered,file_name)\n",
+    "    pie_chart_mode(plot_title,labels_m,values_m,colors_mode,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "    print(dg)\n",
     "except:\n",
