--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -237,6 +237,8 @@
    "source": [
     "#determine 80th percentile\n",
     "cutoff = expanded_ct.distance.quantile(0.8)\n",
+    "if pd.isna(cutoff):\n",
+    "    cutoff = 0\n",
     "dist_threshold = expanded_ct[distance_col].quantile(0.8).round(1)\n",
     "dist_threshold = str(dist_threshold) \n",
     "\n",
