fixed bugs from running notebooks
when running notebooks at the console, I revealed a few bugs that occur when there is no data

these patches fix those bugs

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -256,7 +256,7 @@
     "    print(expanded_ct.loc[(expanded_ct['distance'] <= cutoff)].Mode_confirm.value_counts(dropna=True))\n",
     "\n",
     "except:\n",
-    "    d10_df = expanded_ct.query(\"distance <= \" + cutoff) if \"distance\" in expanded_ct.columns else expanded_ct\n",
+    "    d10_df = expanded_ct.query(\"distance <= \" + str(cutoff)) if \"distance\" in expanded_ct.columns else expanded_ct\n",
     "    debug_df.loc[\"Trips_less_than_80th_pct\"] = scaffolding.trip_label_count(\"Mode_confirm\", d10_df)\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
@@ -426,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
