Update generic metrics for Average Miles for each mode (selected by u… (#113)
* Update generic metrics for Average Miles for each mode (selected by users) chart, and update generic metrics sensed notebook for Average miles per transport mode selected (primary_mode).

* Updated plt.txt for barplot_mode2() to be identical to barplot_mode(), made the timestamp more visible.

* Revert changes for Average Miles for each mode (selected by users) chart.

* Remove the metric Average Miles for each mode (selected by users).

* Refactor changes for Average Trip Length (sensed).

* Removed code-duplication of barplot_sensed_mode().

* Replace call to barplot_sensed_mode() with barplot_mode().

* Reverting extraneous changes.

* Revert extraneous changes to viz_scripts/plots.py

* Revert viz_scripts/plots.py to original state.

* Revert viz_scripts/plots.py to original state. Forgot a space last time.

--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -242,6 +242,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "43ecc5d7",
+   "metadata": {},
+   "source": [
+    "### Average miles per transport mode selected (primary_mode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5189eaee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_title_no_quality=\" Average Miles for each mode with > 3 entries\\n(inferred by OpenPATH from phone sensors)\"\n",
+    "file_name ='average_miles_sensed_mode%s' % file_suffix\n",
+    "\n",
+    "try:\n",
+    "    data = miles.drop((miles.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
+    "    x='primary_mode'\n",
+    "    y='Average (miles)'\n",
+    "    \n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    \n",
+    "    barplot_mode(data,x,y,plot_title, expanded_ct['primary_mode'].dropna().unique().tolist(), file_name)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['primary_mode']), file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "130100ee",
    "metadata": {},
    "source": [
