remove duplicate `use_imperial` assignment

--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -32,8 +32,7 @@
     "mode_of_interest = None\n",
     "include_test_users = False\n",
     "use_imperial = False\n",
-    "sensed_algo_prefix = \"cleaned\"\n",
-    "use_imperial = True"
+    "sensed_algo_prefix = \"cleaned\""
    ]
   },
   {
