centralize get_units to scaffolding.py
instead of duplicating the code that sets the units, get them from a central location!

--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -52,26 +52,10 @@
     "\n",
     "sns.set_style(\"whitegrid\")\n",
     "sns.set()\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39ec1d4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#set the label-units just once!\n",
-    "if use_imperial:\n",
-    "    label_units = \"Miles\"\n",
-    "    short_label = \"miles\"\n",
-    "else:\n",
-    "    label_units = \"Kilometers\"\n",
-    "    short_label = \"kms\"\n",
-    "    \n",
-    "label_units_lower = label_units.lower()\n",
-    "distance_col = \"distance_\" + short_label"
+    "%matplotlib inline\n",
+    "\n",
+    "# get metric vs imperial vars\n",
+    "label_units, short_label, label_units_lower, distance_col, weight_unit = scaffolding.get_units(use_imperial)"
    ]
   },
   {
@@ -282,14 +266,14 @@
     "file_name ='average_miles_sensed_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    data = miles.drop((miles.query(\"Count < 3\").index)).sort_values(by=['Average (miles)'], ascending=False)\n",
+    "    data = dist.drop((dist.query(\"Count < 3\").index)).sort_values(by=['Average ('+label_units_lower+')'], ascending=False)\n",
     "    x='primary_mode'\n",
-    "    y='Average (miles)'\n",
+    "    y='Average ('+label_units_lower+')'\n",
     "    \n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "    \n",
     "    barplot_mode(data,x,y,plot_title, expanded_ct['primary_mode'].dropna().unique().tolist(), file_name)\n",
-    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average (miles)'].values, data['primary_mode']), file_name, plot_title)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Average ('+label_units_lower+')'].values, data['primary_mode']), file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality) "
