--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -65,24 +65,10 @@
     "\n",
     "# convert a dictionary to a defaultdict\n",
     "dic_re = defaultdict(lambda: 'Other',dic_re)\n",
-    "dic_fuel = defaultdict(lambda: 'Other',dic_fuel)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#set the label-units just once!\n",
-    "if use_imperial:\n",
-    "    distance_col = 'distance_miles'\n",
-    "    weight_unit = 'lb'\n",
-    "    dist_unit = 'mile'\n",
-    "else:\n",
-    "    distance_col = 'distance'\n",
-    "    weight_unit ='kg'\n",
-    "    dist_unit = 'km'"
+    "dic_fuel = defaultdict(lambda: 'Other',dic_fuel)\n",
+    "\n",
+    "# get metric vs imperial vars\n",
+    "label_units, dist_unit, label_units_lower, distance_col, weight_unit = scaffolding.get_units(use_imperial)"
    ]
   },
   {
