--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -77,25 +77,10 @@
     "\n",
     "# convert a dictionary to a defaultdict\n",
     "dic_re = defaultdict(lambda: 'Other',dic_re)\n",
-    "dic_pur = defaultdict(lambda: 'Other',dic_pur)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#set the label-units just once!\n",
-    "if use_imperial:\n",
-    "    label_units = \"Miles\"\n",
-    "    short_label = \"miles\"\n",
-    "else:\n",
-    "    label_units = \"Kilometers\"\n",
-    "    short_label = \"kms\"\n",
-    "    \n",
-    "label_units_lower = label_units.lower()\n",
-    "distance_col = \"distance_\" + short_label"
+    "dic_pur = defaultdict(lambda: 'Other',dic_pur)\n",
+    "\n",
+    "# get metric vs imperial vars\n",
+    "label_units, short_label, label_units_lower, distance_col, weight_unit = scaffolding.get_units(use_imperial)"
    ]
   },
   {
