1. Shifted the computation of expanded_ct.distance inside try block to handle errors in case 'DataFrame' object has no attribute 'distance'. 2. Updated \n between quality text and plot title no quality text.

--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -136,17 +136,18 @@
    },
    "outputs": [],
    "source": [
-    "#determine 80th percentile\n",
-    "cutoff = expanded_ct.distance.quantile(0.8)\n",
-    "dist_threshold = expanded_ct[distance_col].quantile(0.8).round(1)\n",
-    "dist_threshold = str(dist_threshold)\n",
-    "\n",
-    "plot_title_no_quality=\"Number of trips under \" + dist_threshold + \" \" + label_units_lower + \" for each primary mode\"\n",
-    "plot_title_no_quality=plot_title_no_quality + \"\\n(inferred by OpenPATH from phone sensors)\" \n",
-    "plot_title_no_quality=plot_title_no_quality + \"\\n[\"+dist_threshold + \" \" + label_units_lower+\" represents 80th percentile of trip length]\"\n",
     "file_name ='ntrips_under10miles_sensed_mode%s' % file_suffix\n",
     "\n",
     "try:\n",
+    "    #determine 80th percentile\n",
+    "    cutoff = expanded_ct.distance.quantile(0.8)\n",
+    "    dist_threshold = expanded_ct[distance_col].quantile(0.8).round(1)\n",
+    "    dist_threshold = str(dist_threshold)\n",
+    "\n",
+    "    plot_title_no_quality=\"Number of trips under \" + dist_threshold + \" \" + label_units_lower + \" for each primary mode\"\n",
+    "    plot_title_no_quality=plot_title_no_quality + \"\\n(inferred by OpenPATH from phone sensors)\" \n",
+    "    plot_title_no_quality=plot_title_no_quality + \"\\n[\"+dist_threshold + \" \" + label_units_lower+\" represents 80th percentile of trip length]\"\n",
+    "\n",
     "    labels_d10 = expanded_ct.loc[(expanded_ct['distance'] <= cutoff)].primary_mode.value_counts(dropna=True).keys().tolist()\n",
     "    values_d10 = expanded_ct.loc[(expanded_ct['distance'] <= cutoff)].primary_mode.value_counts(dropna=True).tolist()\n",
     "    d10_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"< \" + dist_threshold + \" \" + label_units_lower, include_test_users)\n",
@@ -195,7 +196,7 @@
     "        labels_m.append(x)\n",
     "        values_m.append(y)\n",
     "    \n",
-    "    plot_title = plot_title_no_quality + quality_text\n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
     "    pie_chart_sensed_mode(plot_title,labels_m,values_m,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "\n",
@@ -238,7 +239,7 @@
     "            labels_m.append(x)\n",
     "            values_m.append(y)\n",
     "\n",
-    "    plot_title = plot_title_no_quality + quality_text\n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
     "    pie_chart_sensed_mode(plot_title,labels_m,values_m,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
     "\n",
