Added load_viz_notebook_sensor_inference_data() function in generic metrics notebook.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -102,6 +102,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6d44c87e",
+   "metadata": {},
+   "source": [
+    "## Collect Data from Database for Sensed Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55ec383b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expanded_ct_sensed, file_suffix_sensed, quality_text_sensed, debug_df_sensed = scaffolding.load_viz_notebook_sensor_inference_data(year,\n",
+    "                                                                            month,\n",
+    "                                                                            program,\n",
+    "                                                                            include_test_users,\n",
+    "                                                                            sensed_algo_prefix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "modified-skiing",
    "metadata": {},
    "source": [
