Filter for mode_of_interest.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -80,7 +80,7 @@
    "id": "intellectual-columbus",
    "metadata": {},
    "source": [
-    "## Collect Data From Database"
+    "## Collect Data From Database for Generic Metrics"
    ]
   },
   {
@@ -120,6 +120,25 @@
     "                                                                            program,\n",
     "                                                                            include_test_users,\n",
     "                                                                            sensed_algo_prefix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f42f272",
+   "metadata": {},
+   "source": [
+    "## Metrics for Specific Mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "657d7e18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_eb = expanded_ct.query(f\"mode_confirm == '{mode_of_interest}'\") if \"mode_confirm\" in expanded_ct.columns else expanded_ct\n",
+    "quality_text_specific = scaffolding.get_quality_text(expanded_ct, data_eb, mode_of_interest, include_test_users)"
    ]
   },
   {
