Markdown and code for 100% Stacked Bar Charts based on Number of Trips.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -143,6 +143,43 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e50959c1",
+   "metadata": {},
+   "source": [
+    "### 1. 100% Stacked Bar Charts (Based on Number of Trips)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aef741fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = f'ntrips_mode_confirm{file_suffix}'\n",
+    "plot_title_no_quality= \"Number of trips for each mode (selected by users)\"\n",
+    "\n",
+    "try:\n",
+    "    labels_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
+    "    values_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).tolist()\n",
+    "    df_confirmed_tc = process_trip_data(labels_mc, values_mc, \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
+    "    \n",
+    "    labels_pm_sensed = expanded_ct_sensed['primary_mode'].value_counts(dropna=True).keys().tolist()\n",
+    "    values_pm_sensed = expanded_ct_sensed['primary_mode'].value_counts(dropna=True).tolist()\n",
+    "    df_sensed_tc = process_trip_data(labels_pm_sensed, values_pm_sensed, \"Sensed by OpenPATH \\n (Based on Total Trips)\")\\\n",
+    "    \n",
+    "    all_data_frames = [df_confirmed_tc,df_sensed_tc]\n",
+    "    result_df = merge_dataframes(all_data_frames)\n",
+    "\n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
+    "    stacked_bar_chart_generic(plot_title, result_df, file_name, 2)  \n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "demanding-franklin",
    "metadata": {},
    "source": [
