--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -180,6 +180,55 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8fc63a45",
+   "metadata": {},
+   "source": [
+    "### 2. 100% Stacked Bar Charts (Represents 80th of the Number of Trips)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77ece8ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = f'ntrips_mode_under80{file_suffix}'\n",
+    "plot_title_no_quality= \"Number of trips for 80th percentile for each mode (selected by users):\"\n",
+    "\n",
+    "try:\n",
+    "    cutoff = expanded_ct.distance.quantile(0.8)\n",
+    "    if pd.isna(cutoff):\n",
+    "        cutoff = 0\n",
+    "    dist_threshold = expanded_ct[distance_col].quantile(0.8).round(1)\n",
+    "    dist_threshold = str(dist_threshold)\n",
+    "    labels_mc_u80 = expanded_ct.loc[(expanded_ct['distance'] <= cutoff)].Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
+    "    values_mc_u80 = expanded_ct.loc[(expanded_ct['distance'] <= cutoff)].Mode_confirm.value_counts(dropna=True).tolist()\n",
+    "    u80_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"< \" + dist_threshold + \" \" + short_label, include_test_users)\n",
+    "    df_confirmed_tc_u80 = process_trip_data(labels_mc_u80, values_mc_u80, \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
+    "\n",
+    "    cutoff_sensed = expanded_ct_sensed.distance.quantile(0.8)\n",
+    "    if pd.isna(cutoff_sensed):\n",
+    "        cutoff_sensed = 0\n",
+    "    dist_threshold_sensed = expanded_ct_sensed[distance_col].quantile(0.8).round(1)\n",
+    "    dist_threshold_sensed = str(dist_threshold_sensed)\n",
+    "    labels_pm_u80 = expanded_ct_sensed.loc[(expanded_ct_sensed['distance'] <= cutoff_sensed)].primary_mode.value_counts(dropna=True).keys().tolist()\n",
+    "    values_pm_u80 = expanded_ct_sensed.loc[(expanded_ct_sensed['distance'] <= cutoff_sensed)].primary_mode.value_counts(dropna=True).tolist()\n",
+    "    u80_quality_text_sensed = scaffolding.get_quality_text_sensed(expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff_sensed], \"<= \" + dist_threshold_sensed + \" \" + short_label , include_test_users)\n",
+    "    df_sensed_tc_u80 = process_trip_data(labels_pm_u80, values_pm_u80,\"Sensed by OpenPATH \\n (Based on Total Trips)\")\n",
+    "\n",
+    "    all_data_frames_u80 = [df_confirmed_tc_u80, df_sensed_tc_u80]\n",
+    "    result_df_u80 = merge_dataframes(all_data_frames_u80)\n",
+    "\n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Sensed: \" + u80_quality_text_sensed + \"\\n\" + \"For Labeled: \" + u80_quality_text\n",
+    "    stacked_bar_chart_generic(plot_title, result_df_u80, file_name, 2)\n",
+    "except Exception as e:\n",
+    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "demanding-franklin",
    "metadata": {},
    "source": [
