3. 100% Stacked Bar Charts representing commute trips.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -229,6 +229,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7fa4f3da",
+   "metadata": {},
+   "source": [
+    "### 3. 100% Stacked Bar Charts (Representing Commute Trips) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c6cd4cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = \"ntrips_commute_mode_confirm{file_suffix}\"\n",
+    "plot_title_no_quality= \"Number of commute trips for each mode (selected by users)\"\n",
+    "\n",
+    "try:\n",
+    "    # Number of commute trips\n",
+    "\n",
+    "    if (len(dynamic_labels)):\n",
+    "        purpose_map_label =  scaffolding.mapping_labels(dynamic_labels, \"PURPOSE\")\n",
+    "        translation_work = purpose_map_label['work']\n",
+    "        trip_purpose_query = f\"Trip_purpose == '{translation_work}'\"\n",
+    "    else:\n",
+    "        trip_purpose_query = \"Trip_purpose == 'Work'\"\n",
+    "\n",
+    "    labels_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
+    "    values_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).tolist()\n",
+    "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(trip_purpose_query), \"commute\", include_test_users)\n",
+    "    df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute, \"Labeled by user \\n (Based on Confirmed Trips)\")\n",
+    "    \n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + commute_quality_text\n",
+    "    stacked_bar_chart_generic(plot_title, df_total_trip_commute, file_name, 1)\n",
+    "except Exception as e:\n",
+    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "demanding-franklin",
    "metadata": {},
    "source": [
@@ -242,8 +282,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality=\"Average \"+ label_units+\" for each mode with > 3 entries\"\n",
     "file_name ='average_miles_mode_confirm%s' % file_suffix\n",
+    "plot_title_no_quality=\"Average \"+ label_units+\" for each mode with > 3 entries\"\n",
     "\n",
     "try:\n",
     "    x='Mode_confirm'\n",
