--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -232,7 +232,7 @@
    "id": "7fa4f3da",
    "metadata": {},
    "source": [
-    "### 3. 100% Stacked Bar Charts (Representing Commute Trips) "
+    "### 3. 100% Stacked Bar Charts (Represents Commute Trips) "
    ]
   },
   {
@@ -246,8 +246,6 @@
     "plot_title_no_quality= \"Number of commute trips for each mode (selected by users)\"\n",
     "\n",
     "try:\n",
-    "    # Number of commute trips\n",
-    "\n",
     "    if (len(dynamic_labels)):\n",
     "        purpose_map_label =  scaffolding.mapping_labels(dynamic_labels, \"PURPOSE\")\n",
     "        translation_work = purpose_map_label['work']\n",
