4. 100% Stacked Bar Charts representing Distance by Mode.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -267,6 +267,72 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b560cb32",
+   "metadata": {},
+   "source": [
+    "### 4. 100% Stacked Bar Charts (Represents Distance by Mode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffccb96f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name ='distance_mode%s' % file_suffix\n",
+    "plot_title_no_quality = label_units + \" for each mode\"\n",
+    "\n",
+    "try:\n",
+    "    dist = expanded_ct.groupby('Mode_confirm').agg({distance_col: ['sum', 'count' , 'mean']})\n",
+    "    dist.columns = ['Total ('+label_units_lower+')', 'Count', 'Average ('+label_units_lower+')']\n",
+    "    dist = dist.reset_index()\n",
+    "    dist =dist.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
+    "    dist_dict = dict(zip(dist['Mode_confirm'], dist['Total ('+label_units_lower+')']))\n",
+    "    labels_mc_dist = []\n",
+    "    values_mc_dist = []\n",
+    "    for x, y in dist_dict.items():\n",
+    "        labels_mc_dist.append(x)\n",
+    "        values_mc_dist.append(y)    \n",
+    "    df_confirm_dist = process_trip_data(labels_mc_dist, values_mc_dist, \"Labeled by user \\n Trip distance\")\n",
+    "\n",
+    "    dist_sensed = expanded_ct_sensed.groupby('primary_mode').agg({distance_col: ['sum', 'count' , 'mean']})\n",
+    "    dist_sensed.columns = ['Total ('+label_units_lower+')', 'Count', 'Average ('+label_units_lower+')']\n",
+    "    dist_sensed = dist_sensed.reset_index()\n",
+    "    dist_sensed = dist_sensed.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
+    "    dist_dict_sensed = dict(zip(dist_sensed['primary_mode'], dist_sensed['Total ('+label_units_lower+')']))\n",
+    "    labels_pm_dist = []\n",
+    "    values_pm_dist = []\n",
+    "    for x, y in dist_dict_sensed.items():\n",
+    "        labels_pm_dist.append(x)\n",
+    "        values_pm_dist.append(y)\n",
+    "    df_sensed_dist = process_trip_data(labels_pm_dist, values_pm_dist, \"Sensed by OpenPATH \\n Trip distance (Overall)\")\n",
+    "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
+    "\n",
+    "    dist_sensed_land = expanded_ct_sensed.groupby('primary_mode').agg({distance_col: ['sum', 'count' , 'mean']})\n",
+    "    dist_sensed_land.columns = ['Total ('+label_units_lower+')', 'Count', 'Average ('+label_units_lower+')']\n",
+    "    dist_sensed_land = dist_sensed_land.reset_index()\n",
+    "    dist_sensed_land =dist_sensed_land.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
+    "    dist_dict_sensed_land = dict(zip(dist_sensed_land['primary_mode'], dist_sensed_land['Total ('+label_units_lower+')']))\n",
+    "    labels_pm_dist_land = []\n",
+    "    values_pm_dist_land = []\n",
+    "    for x, y in dist_dict_sensed_land.items():\n",
+    "        if x != \"AIR_OR_HSR\":\n",
+    "            labels_pm_dist_land.append(x)\n",
+    "            values_pm_dist_land.append(y)\n",
+    "    df_sensed_dist_land = process_trip_data(labels_pm_dist_land, values_pm_dist_land, \"Sensed by OpenPATH \\n Trips distance (Land)\")\n",
+    "    \n",
+    "    all_data_frames = [df_confirm_dist,df_sensed_dist, df_sensed_dist_land]\n",
+    "    result_df = merge_dataframes(all_data_frames)\n",
+    "\n",
+    "    stacked_bar_chart_generic(plot_title_no_quality, result_df, file_name, 3)\n",
+    "except Exception as e:\n",
+    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "demanding-franklin",
    "metadata": {},
    "source": [
