5. 100% Stacked Bar Charts representing Count by Purpose.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -333,6 +333,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ffb2df0b",
+   "metadata": {},
+   "source": [
+    "### 5. 100% Stacked Bar Charts (Count by Purpose)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46474ada",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_title_no_quality=\"Number of trips for each purpose (selected by users)\"\n",
+    "file_name= 'ntrips_purpose%s' % file_suffix\n",
+    "\n",
+    "try:\n",
+    "    labels_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
+    "    values_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).tolist()\n",
+    "    df_purpose_trip = process_trip_data(labels_tp, values_tp, \"Labeled by user \\n All Purpose Trips\")\n",
+    "    \n",
+    "    labels_tp_eb = data_eb['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
+    "    values_tp_eb = data_eb['Trip_purpose'].value_counts(dropna=True).tolist()\n",
+    "    df_purpose_trip_eb = process_trip_data(labels_tp_eb, values_tp_eb, \"Labeled by user \\n e-bike specific Purpose Trips\")\n",
+    "    \n",
+    "    all_tp_data_frames = [df_purpose_trip,df_purpose_trip_eb]\n",
+    "    result_tp_df = merge_dataframes(all_tp_data_frames)\n",
+    "    \n",
+    "    stacked_bar_chart_generic(plot_title_no_quality, result_tp_df, file_name, 2)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "demanding-franklin",
    "metadata": {},
    "source": [
