6. 100% Stacked Bar Charts representing Replaced mode.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -369,6 +369,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3e2e8d8c",
+   "metadata": {},
+   "source": [
+    "### 6. 100% Stacked Bar Charts (Represents Rep)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cc86684",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_title_no_quality=f\"Number of trips for each replaced mode by {mode_of_interest} only\"\n",
+    "file_name= f'ntrips_{mode_of_interest}_replace%s' % file_suffix\n",
+    "\n",
+    "try:\n",
+    "    labels_eb = data_eb.Replaced_mode.value_counts(dropna=True).keys().tolist()\n",
+    "    values_eb = data_eb.Replaced_mode.value_counts(dropna=True).tolist()\n",
+    "\n",
+    "    df_replaced_trip = process_trip_data(labels_eb, values_eb, \"Replaced number of trips by e-bike\")\n",
+    "\n",
+    "    stacked_bar_chart_generic(plot_title, df_replaced_trip, file_name, 1)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "demanding-franklin",
    "metadata": {},
    "source": [
