Update markdown for 6.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -372,7 +372,7 @@
    "id": "3e2e8d8c",
    "metadata": {},
    "source": [
-    "### 6. 100% Stacked Bar Charts (Represents Rep)"
+    "### 6. 100% Stacked Bar Charts (Represents Replaced mode)"
    ]
   },
   {
@@ -395,6 +395,14 @@
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b20f1b4b",
+   "metadata": {},
+   "source": [
+    "7. 100% Stacked Bar Charts ()"
    ]
   },
   {
