7. 100% Stacked Bar Charts representing Trip Distance based on Replaced mode.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -372,7 +372,7 @@
    "id": "3e2e8d8c",
    "metadata": {},
    "source": [
-    "### 6. 100% Stacked Bar Charts (Represents Replaced mode)"
+    "### 6. 100% Stacked Bar Charts (Represents Number of trips based on Replaced mode)"
    ]
   },
   {
@@ -399,10 +399,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b20f1b4b",
+   "id": "f5575b8d",
    "metadata": {},
    "source": [
-    "7. 100% Stacked Bar Charts ()"
+    "### 7. 100% Stacked Bar Charts (Represents Trip Distance based on Replaced mode ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48c131c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_title_no_quality=f\"Distribution of \"+label_units+f\" Replaced by {mode_of_interest}\"\n",
+    "file_name =f'miles_{mode_of_interest}_replaced_mode%s' % file_suffix\n",
+    "\n",
+    "try:\n",
+    "    dg=data_eb.groupby('Replaced_mode').agg({distance_col: ['sum', 'count' , 'mean']},)\n",
+    "    dg.columns = ['Total ('+label_units_lower+')', 'Count' ,'Average ('+label_units_lower+')']\n",
+    "    dg = dg.reset_index()\n",
+    "    dg = dg.sort_values(by=['Total ('+label_units_lower+')'], ascending=False)\n",
+    "\n",
+    "    dg_dict = dict(zip(dg['Replaced_mode'], dg['Total ('+label_units_lower+')']))\n",
+    "    \n",
+    "    labels_m = []\n",
+    "    values_m = []\n",
+    "\n",
+    "    for x, y in dg_dict.items():\n",
+    "        labels_m.append(x)\n",
+    "        values_m.append(y)\n",
+    "\n",
+    "    df_replaced_dist = process_trip_data(labels_m, values_m, \"Replaced distance by e-bike\")\n",
+    "\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    stacked_bar_chart_generic(plot_title, df_replaced_dist, file_name, 1)\n",
+    "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
