Update Markdown text.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -442,6 +442,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bcef1f6a",
+   "metadata": {},
+   "source": [
+    "## Generic Metrics (Bar Charts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "demanding-franklin",
    "metadata": {},
    "source": [
